<resources>
    <string name="app_name">Comtech Tool</string>
    <string name="button_cards">Cards</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_start">Start</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>
    <string name="text_brand">Brand</string>
    <string name="text_Name">Name</string>
    <string name="text_type">Type</string>
    <string name="filekey_cards">com.example.comtechtool.cards_data</string>
    <string name="key_init">initialized</string>
    <string-array name="array_test">
        <item>a</item>
        <item>b</item>
    </string-array>
    <string name="warning_storagepermission">Storage permission is required, please allow from settings</string>
</resources>