<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_CardMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_CardList"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_cards"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCard_Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_CardList" />

        <Button
            android:id="@+id/buttonCard_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_add"
            app:layout_constraintEnd_toEndOf="@+id/buttonCard_Start"
            app:layout_constraintStart_toStartOf="@+id/buttonCard_Start"
            app:layout_constraintTop_toBottomOf="@+id/buttonCard_Start" />

        <Button
            android:id="@+id/buttonCard_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_back"
            app:layout_constraintEnd_toEndOf="@+id/buttonCard_Add"
            app:layout_constraintStart_toStartOf="@+id/buttonCard_Add"
            app:layout_constraintTop_toBottomOf="@+id/buttonCard_Add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>